--- a/index.ipynb
+++ b/index.ipynb
@@ -95,17 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.0 77.0\n"
+     ]
+    }
+   ],
    "source": [
     "a, b = 5, 7\n",
     "x1, y1 = -1, -1\n",
     "\n",
     "# formula in python\n",
-    "# s = (3*x1**2+a)/(2*y1)\n",
-    "# x3 = s**2 - 2*x1\n",
-    "# y3 = s*(x1-x3) - y1"
+    "s = (3*x1**2+a)/(2*y1)\n",
+    "x3 = s**2 - 2*x1\n",
+    "y3 = s*(x1-x3) - y1\n",
+    "print(x3,y3)"
    ]
   },
   {
