--- a/index.ipynb
+++ b/index.ipynb
@@ -144,6 +144,8 @@
     "        # x being None and y being None represents the point at infinity\n",
     "        # Check for that here since the equation below won't make sense\n",
     "        # with None values for both.\n",
+    "        if x is None and y is None:\n",
+    "            \n",
     "        # make sure that the elliptic curve equation is satisfied\n",
     "        # y**2 == x**3 + a*x + b\n",
     "        if self.y**2 != self.x**3 + a*x + b:\n",
