automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,8 @@
     "        if self.x is None:\n",
     "            return other\n",
     "        # Case 0.1: other is the point at infinity, return self\n",
-    "        if other.x is NS\n",
+    "        if other.x is None:\n",
+    "            return self\n",
     "\n",
     "        # Case 1: self.x == other.x, self.y != other.y\n",
     "        # Result is point at infinity\n",
