--- a/index.ipynb
+++ b/index.ipynb
@@ -163,11 +163,11 @@
     "            return self\n",
     "\n",
     "        # Case 1: self.x == other.x, self.y != other.y\n",
-    "        if self.x == other.x and self.y != \n",
+    "        if self.x == other.x and self.y != other.y:\n",
     "        # Result is point at infinity\n",
     "        # Remember to return an instance of this class:\n",
     "        # self.__class__(x, y, a, b)\n",
-    "        pass"
+    "        p"
    ]
   }
  ],
