--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     "        # Result is point at infinity\n",
     "        # Remember to return an instance of this class:\n",
     "        # self.__class__(x, y, a, b)\n",
-    "        p"
+    "        return self.__class__(None, None, self.a, )"
    ]
   }
  ],
