automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,9 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-3-0e86115ffc0b>, line 36)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-0e86115ffc0b>\"\u001b[0;36m, line \u001b[0;32m36\u001b[0m\n\u001b[0;31m    return self.__class__(None, None, self.a, self.b)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import Point\n",
     "\n",
@@ -167,8 +176,15 @@
     "        # Result is point at infinity\n",
     "        # Remember to return an instance of this class:\n",
     "        # self.__class__(x, y, a, b)\n",
-    "        return self.__class__(None, None, self.a, )"
+    "            return self.__class__(None, None, self.a, self.b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
